--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "firebase": "^11.0.2",
     "localforage": "^1.10.0",
+    "lucide-react": "^0.468.0",
     "match-sorter": "^8.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
